--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/xjr3lgi.css" />
     <title>Wave Motion Effect | Codrops</title>
   </head>
-  <body>
+  <body class="loading">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
